fix: Fixing the model and results files

--- a/Proyecto 1/FunnysCompany.ipynb
+++ b/Proyecto 1/FunnysCompany.ipynb
@@ -9,45 +9,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Restricted license - for non-production use only - expires 2026-11-23\n",
-      "R37: Slack = -0.840000000083819\n",
-      "R38: Slack = -0.21440000017173588\n",
-      "R39: Slack = -0.6487040002830327\n",
-      "R40: Slack = -0.9199999999254942\n",
-      "R41: Slack = -0.4224000000394881\n",
-      "R42: Slack = -0.015328000066801906\n",
-      "R43: Slack = -0.7399999999906868\n",
-      "R44: Slack = -0.832399999955669\n",
-      "R45: Slack = -0.4688239998649806\n",
-      "R46: Slack = -0.8000000000465661\n",
-      "R47: Slack = -0.020000000076834112\n",
-      "R48: Slack = -0.07300000009126961\n",
-      "R49: Slack = -0.13999999989755452\n",
-      "R50: Slack = -0.21459999959915876\n",
-      "R51: Slack = -0.12829399900510907\n",
-      "R52: Slack = -0.5\n",
-      "R53: Slack = -0.9499999999534339\n",
-      "R54: Slack = -0.3349999999627471\n",
+      "R13: Slack = -98895939.84\n",
+      "R14: Slack = -98719290.2144\n",
+      "R15: Slack = -98514376.648704\n",
+      "R16: Slack = -98819815.92\n",
+      "R17: Slack = -98560175.4224\n",
+      "R18: Slack = -98243414.015328\n",
+      "R19: Slack = -99354815.74\n",
+      "R20: Slack = -99187067.8324\n",
+      "R21: Slack = -98975705.468824\n",
+      "R22: Slack = -99555814.8\n",
+      "R23: Slack = -99489187.02\n",
+      "R24: Slack = -99412565.073\n",
+      "R25: Slack = -98684818.14\n",
+      "R26: Slack = -98171897.2146\n",
+      "R27: Slack = -97458937.128294\n",
+      "R28: Slack = -99605521.5\n",
+      "R29: Slack = -99487177.95\n",
+      "R30: Slack = -99333331.335\n",
       "Demanda futura (Dk_t): {('R1', 1): 1104060.16, ('R1', 2): 1280709.7855999998, ('R1', 3): 1485623.3512959997, ('R2', 1): 1180184.08, ('R2', 2): 1439824.5776, ('R2', 3): 1756585.984672, ('R3', 1): 645184.26, ('R3', 2): 812932.1676, ('R3', 3): 1024294.5311760001, ('R4', 1): 444185.19999999995, ('R4', 2): 510812.9799999999, ('R4', 3): 587434.9269999999, ('R5', 1): 1315181.86, ('R5', 2): 1828102.7854000004, ('R5', 3): 2541062.871706001, ('R6', 1): 394478.5, ('R6', 2): 512822.05000000005, ('R6', 3): 666668.665}\n",
       "Capacidades de producción (Cpp): {'Pequeña': 4636446, 'Grande': 14966773}\n",
-      "X_ij[Antofagasta,Pequeña] = -0.0\n",
-      "X_ij[Antofagasta,Grande] = -0.0\n",
-      "X_ij[Valparaíso,Pequeña] = -0.0\n",
-      "X_ij[Valparaíso,Grande] = -0.0\n",
-      "X_ij[Santiago,Pequeña] = -0.0\n",
-      "X_ij[Santiago,Grande] = -0.0\n",
-      "X_ij[Concepción,Pequeña] = 1.0\n",
-      "X_ij[Concepción,Grande] = -0.0\n",
-      "X_ij[Puerto Montt,Pequeña] = -0.0\n",
-      "X_ij[Puerto Montt,Grande] = -0.0\n",
-      "Función objetivo: 8388965.209999999\n",
+      "X_ij[Antofagasta,Pequeña] = 0.0\n",
+      "X_ij[Antofagasta,Grande] = 0.0\n",
+      "X_ij[Valparaíso,Pequeña] = 0.0\n",
+      "X_ij[Valparaíso,Grande] = 0.0\n",
+      "X_ij[Santiago,Pequeña] = 0.0\n",
+      "X_ij[Santiago,Grande] = 0.0\n",
+      "X_ij[Concepción,Pequeña] = 0.0\n",
+      "X_ij[Concepción,Grande] = 0.0\n",
+      "X_ij[Puerto Montt,Pequeña] = 0.0\n",
+      "X_ij[Puerto Montt,Grande] = 0.0\n",
+      "Función objetivo: 0.0\n",
       "Y_ikft[Antofagasta, R1, AT1, 1] = 0.0\n",
       "Y_ikft[Antofagasta, R1, AT1, 2] = 0.0\n",
       "Y_ikft[Antofagasta, R1, AT1, 3] = 0.0\n",
@@ -366,10 +365,9 @@
     "    model.addConstr(sum(X_ij[i, j] for j in data.tipos_planta) <= 1)\n",
     "\n",
     "\n",
-    "for i in data.ciudades:\n",
+    "for t in data.años:\n",
     "    for j in data.tipos_planta:\n",
-    "        for t in data.años:\n",
-    "            model.addConstr(sum(Y_ikft[i, k, f, t] for k in data.regiones for f in data.transportes) <= X_ij[i, j] * Cpp[j])\n",
+    "        model.addConstr(sum(Y_ikft[i, k, f, t] for i in data.ciudades for k in data.regiones for f in data.transportes) <= sum(X_ij[i, j] * Cpp[j] for i in data.ciudades))\n",
     "\n",
     "\n",
     "D_unmet = model.addVars(data.regiones, data.años, vtype=GRB.CONTINUOUS, name=\"D_unmet\")\n",
@@ -378,11 +376,6 @@
     "        model.addConstr(sum(Y_ikft[i, k, f, t] for i in data.ciudades for f in data.transportes) + D_unmet[k, t] >= Dk_t[k, t])\n",
     "\n",
     "\n",
-    "# Por lo menos abrir una planta, si no se abre ninguna, la solucion es no abrir nada xd\n",
-    "model.addConstr(\n",
-    "    sum(X_ij[i, j] for i in data.ciudades for j in data.tipos_planta) >= 1,\n",
-    "    \"AlMenosUnaPlanta\"\n",
-    ")\n",
     "\n",
     "\n",
     "\n",
@@ -448,6 +441,124 @@
     "                            arch.write(f\"Y_ikft[{c}, {r}, {t}, {an}] = {valor}\\n\")\n",
     "                            print(f\"Y_ikft[{c}, {r}, {t}, {an}] = {valor}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OTRO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Función objetivo:  1655576250.1431863\n",
+      "Transportar 1104060.16 unidades desde Santiago a R1 usando AT2 en el año 1\n",
+      "Transportar 1280709.7855999998 unidades desde Santiago a R1 usando AT2 en el año 2\n",
+      "Transportar 1485623.3512959997 unidades desde Santiago a R1 usando AT2 en el año 3\n",
+      "Transportar 1180184.08 unidades desde Santiago a R2 usando AT1 en el año 1\n",
+      "Transportar 1439824.5776 unidades desde Santiago a R2 usando AT1 en el año 2\n",
+      "Transportar 1756585.984672 unidades desde Santiago a R2 usando AT1 en el año 3\n",
+      "Transportar 645184.26 unidades desde Santiago a R3 usando AT1 en el año 1\n",
+      "Transportar 812932.1676 unidades desde Santiago a R3 usando AT1 en el año 2\n",
+      "Transportar 1024294.5311760001 unidades desde Santiago a R3 usando AT1 en el año 3\n",
+      "Transportar 444185.19999999995 unidades desde Santiago a R4 usando AT1 en el año 1\n",
+      "Transportar 510812.9799999999 unidades desde Santiago a R4 usando AT1 en el año 2\n",
+      "Transportar 587434.9269999999 unidades desde Santiago a R4 usando AT1 en el año 3\n",
+      "Transportar 1315181.86 unidades desde Santiago a R5 usando AT1 en el año 1\n",
+      "Transportar 1828102.7854000004 unidades desde Santiago a R5 usando AT1 en el año 2\n",
+      "Transportar 2541062.871706001 unidades desde Santiago a R5 usando AT1 en el año 3\n",
+      "Transportar 394478.5 unidades desde Santiago a R6 usando AT1 en el año 1\n",
+      "Transportar 512822.05 unidades desde Santiago a R6 usando AT1 en el año 2\n",
+      "Transportar 666668.665 unidades desde Santiago a R6 usando AT1 en el año 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gurobipy import Model, GRB\n",
+    "from contextlib import redirect_stdout\n",
+    "import pandas as pd\n",
+    "import data\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Parámetros\n",
+    "C_ij = {(i, j): data.costos_apertura[(i, j)] for i in data.ciudades for j in data.tipos_planta}  # Costo de apertura\n",
+    "Ctikf = {(i, k, f): data.costos_transporte[(f, i, k)] for i in data.ciudades for k in data.regiones for f in data.transportes}  # Costo de transporte\n",
+    "Dk_actual = {k: data.demanda_actual[k] for k in data.regiones}  # Demanda actual\n",
+    "T_k = {k: data.tasas_crecimiento[k] for k in data.regiones}  # Tasa de crecimiento\n",
+    "Dk_t = {(k, t): Dk_actual[k] * (1 + T_k[k])**t for k in data.regiones for t in data.años}  # Demanda futura\n",
+    "Cpp = {j: data.capacidad_planta[j] for j in data.tipos_planta}  # Capacidad de producción\n",
+    "Cv_ij = {(i, j): data.costos_variables[(i, j)] for i in data.ciudades for j in data.tipos_planta}  # Costo variable\n",
+    "Cfij = {(i, j): data.costos_fijos[(i, j)] for i in data.ciudades for j in data.tipos_planta}  # Costo fijo\n",
+    "\n",
+    "\n",
+    "# Modelo\n",
+    "model = Model(\"Optimización de Producción\")\n",
+    "\n",
+    "# Variables\n",
+    "X_ij = model.addVars(data.ciudades, data.tipos_planta, vtype=GRB.BINARY, name=\"X\")\n",
+    "Y_ikft = model.addVars(data.ciudades, data.regiones, data.transportes, data.años, vtype=GRB.CONTINUOUS, name=\"Y\")\n",
+    "\n",
+    "# Restricciones\n",
+    "for j in data.tipos_planta:\n",
+    "    model.addConstr(sum(X_ij[i, j] for i in data.ciudades) >= 1)\n",
+    "\n",
+    "for i in data.ciudades:\n",
+    "    model.addConstr(sum(X_ij[i, j] for j in data.tipos_planta) >= 1)\n",
+    "\n",
+    "\n",
+    "for i in data.ciudades:\n",
+    "    for t in data.años:\n",
+    "        for j in data.tipos_planta:\n",
+    "            model.addConstr(sum(Y_ikft[i, k, f, t] for k in data.regiones for f in data.transportes) <= sum(X_ij[i, j] * Cpp[j] for i in data.ciudades))\n",
+    "\n",
+    "for k in data.regiones:\n",
+    "    for t in data.años:\n",
+    "        model.addConstr(sum(Y_ikft[i, k, f, t] for i in data.ciudades for f in data.transportes) >= Dk_t[k, t])\n",
+    "\n",
+    "# Función objetivo (funcion 2 del word)\n",
+    "model.setObjective(\n",
+    "    sum(C_ij[i, j] * X_ij[i, j] for i in data.ciudades for j in data.tipos_planta) +\n",
+    "    sum(Cfij[i, j] * X_ij[i, j] for i in data.ciudades for j in data.tipos_planta) +\n",
+    "    sum((Cv_ij[i, j] + Ctikf[i, k, f]) * Y_ikft[i, k, f, t] \n",
+    "        for i in data.ciudades for j in data.tipos_planta \n",
+    "        for k in data.regiones for f in data.transportes for t in data.años),\n",
+    "    GRB.MINIMIZE\n",
+    ")\n",
+    "\n",
+    "# Optimizando\n",
+    "log = \"model.txt\"\n",
+    "with open(log, \"w\", encoding=\"utf-8\") as file:\n",
+    "    with redirect_stdout(file):\n",
+    "        #model.update()\n",
+    "        model.optimize()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Resultados\n",
+    "arch = open('results.txt', 'w', encoding='utf-8')\n",
+    "arch.write('Función objetivo: ' + str(model.objVal) + '\\n')\n",
+    "print('Función objetivo: ', model.objVal)\n",
+    "\n",
+    "if model.status == GRB.OPTIMAL:\n",
+    "    for c in data.ciudades:\n",
+    "        for r in data.regiones:\n",
+    "            for t in data.transportes:\n",
+    "                for an in data.años:\n",
+    "                    if Y_ikft[c, r, t, an].X > 0:\n",
+    "                        print(f\"Transportar {Y_ikft[c, r, t, an].X} unidades desde {c} a {r} usando {t} en el año {an}\")\n",
+    "                        arch.write(f\"Transportar {Y_ikft[c, r, t, an].X} unidades desde {c} a {r} usando {t} en el año {an}\\n\")\n",
+    "\n",
+    "arch.close()\n"
    ]
   }
  ],
