fix: fix many things

--- a/Proyecto 1/FunnysCompany.ipynb
+++ b/Proyecto 1/FunnysCompany.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -181,27 +181,27 @@
      "output_type": "stream",
      "text": [
       "    Año Ciudad Origen Región Destino Transporte  Unidades Tipo de Planta\n",
-      "0     1   Antofagasta             R2        AT1    446828               \n",
-      "1     1      Santiago             R1        AT2   1104060               \n",
-      "2     1      Santiago             R2        AT1    733356               \n",
-      "3     1      Santiago             R3        AT1    645184               \n",
-      "4     1      Santiago             R4        AT1    444185               \n",
-      "5     1      Santiago             R5        AT1   1315181               \n",
-      "6     1      Santiago             R6        AT1    394478               \n",
-      "7     2   Antofagasta             R2        AT1   1439824               \n",
-      "8     2   Antofagasta             R3        AT2    308933               \n",
-      "9     2      Santiago             R1        AT2   1280709               \n",
-      "10    2      Santiago             R3        AT1    503998               \n",
-      "11    2      Santiago             R4        AT1    510812               \n",
-      "12    2      Santiago             R5        AT1   1828102               \n",
-      "13    2      Santiago             R6        AT1    512822               \n",
-      "14    3   Antofagasta             R1        AT1    644343               \n",
-      "15    3   Antofagasta             R2        AT1   1756585               \n",
-      "16    3   Antofagasta             R3        AT2   1024294               \n",
-      "17    3      Santiago             R1        AT2    841279               \n",
-      "18    3      Santiago             R4        AT1    587434               \n",
-      "19    3      Santiago             R5        AT1   2541062               \n",
-      "20    3      Santiago             R6        AT1    666668               \n"
+      "0     1   Antofagasta             R2        AT1    446828              ?\n",
+      "1     1      Santiago             R1        AT2   1104060              ?\n",
+      "2     1      Santiago             R2        AT1    733356              ?\n",
+      "3     1      Santiago             R3        AT1    645184              ?\n",
+      "4     1      Santiago             R4        AT1    444185              ?\n",
+      "5     1      Santiago             R5        AT1   1315181              ?\n",
+      "6     1      Santiago             R6        AT1    394478              ?\n",
+      "7     2   Antofagasta             R2        AT1   1439824              ?\n",
+      "8     2   Antofagasta             R3        AT2    308933              ?\n",
+      "9     2      Santiago             R1        AT2   1280709              ?\n",
+      "10    2      Santiago             R3        AT1    503998              ?\n",
+      "11    2      Santiago             R4        AT1    510812              ?\n",
+      "12    2      Santiago             R5        AT1   1828102              ?\n",
+      "13    2      Santiago             R6        AT1    512822              ?\n",
+      "14    3   Antofagasta             R1        AT1    644343              ?\n",
+      "15    3   Antofagasta             R2        AT1   1756585              ?\n",
+      "16    3   Antofagasta             R3        AT2   1024294              ?\n",
+      "17    3      Santiago             R1        AT2    841279              ?\n",
+      "18    3      Santiago             R4        AT1    587434              ?\n",
+      "19    3      Santiago             R5        AT1   2541062              ?\n",
+      "20    3      Santiago             R6        AT1    666668              ?\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
     "                            \"Región Destino\": r,\n",
     "                            \"Transporte\": t,\n",
     "                            \"Unidades\": int(Y_ikft[c, r, t, an].X),\n",
-    "                            \"Tipo de Planta\": next((X_ij[c, tipo].X for tipo in data.tipos_planta if X_ij[c, tipo].X > 0), '')\n",
+    "                            \"Tipo de Planta\": next((tipo for tipo in data.tipos_planta if X_ij[c, tipo].X > 0), '?')\n",
     "                        })\n",
     "\n",
     "\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
