--- a/Proyecto 1/FunnysCompany.ipynb
+++ b/Proyecto 1/FunnysCompany.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +160,15 @@
     "        model.addConstr(sum(Y_ikft[i, k, f, t] for i in data.ciudades for f in data.transportes) >= Dk_t[k, t])\n",
     "\n",
     "\n",
+    "#nueva\n",
+    "for i in data.ciudades:\n",
+    "    for t in data.años:\n",
+    "        model.addConstr(\n",
+    "            sum(Y_ikft[i,k,f,t] for k in data.regiones for f in data.transportes) <= \n",
+    "            sum(X_ij[i,j] * Cpp[j] for j in data.tipos_planta)\n",
+    "        )\n",
+    "\n",
+    "\n",
     "# Función objetivo (funcion 2 del word)\n",
     "model.setObjective(\n",
     "    sum(C_ij[i, j] * X_ij[i, j] for i in data.ciudades for j in data.tipos_planta) +\n",
@@ -173,35 +182,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Año Ciudad Origen Región Destino Transporte  Unidades Tipo de Planta\n",
-      "0     1   Antofagasta             R2        AT1    446828              ?\n",
-      "1     1      Santiago             R1        AT2   1104060              ?\n",
-      "2     1      Santiago             R2        AT1    733356              ?\n",
-      "3     1      Santiago             R3        AT1    645184              ?\n",
-      "4     1      Santiago             R4        AT1    444185              ?\n",
-      "5     1      Santiago             R5        AT1   1315181              ?\n",
-      "6     1      Santiago             R6        AT1    394478              ?\n",
-      "7     2   Antofagasta             R2        AT1   1439824              ?\n",
-      "8     2   Antofagasta             R3        AT2    308933              ?\n",
-      "9     2      Santiago             R1        AT2   1280709              ?\n",
-      "10    2      Santiago             R3        AT1    503998              ?\n",
-      "11    2      Santiago             R4        AT1    510812              ?\n",
-      "12    2      Santiago             R5        AT1   1828102              ?\n",
-      "13    2      Santiago             R6        AT1    512822              ?\n",
-      "14    3   Antofagasta             R1        AT1    644343              ?\n",
-      "15    3   Antofagasta             R2        AT1   1756585              ?\n",
-      "16    3   Antofagasta             R3        AT2   1024294              ?\n",
-      "17    3      Santiago             R1        AT2    841279              ?\n",
-      "18    3      Santiago             R4        AT1    587434              ?\n",
-      "19    3      Santiago             R5        AT1   2541062              ?\n",
-      "20    3      Santiago             R6        AT1    666668              ?\n"
+      "    Año Ciudad Origen Región Destino Transporte  Unidades\n",
+      "0     1   Antofagasta             R2        AT1    446828\n",
+      "1     1      Santiago             R1        AT2   1104060\n",
+      "2     1      Santiago             R2        AT1    733356\n",
+      "3     1      Santiago             R3        AT1    645184\n",
+      "4     1      Santiago             R4        AT1    444185\n",
+      "5     1      Santiago             R5        AT1   1315181\n",
+      "6     1      Santiago             R6        AT1    394478\n",
+      "7     2   Antofagasta             R2        AT1   1439824\n",
+      "8     2   Antofagasta             R3        AT2    308933\n",
+      "9     2      Santiago             R1        AT2   1280709\n",
+      "10    2      Santiago             R3        AT1    503998\n",
+      "11    2      Santiago             R4        AT1    510812\n",
+      "12    2      Santiago             R5        AT1   1828102\n",
+      "13    2      Santiago             R6        AT1    512822\n",
+      "14    3   Antofagasta             R1        AT1    644343\n",
+      "15    3   Antofagasta             R2        AT1   1756585\n",
+      "16    3   Antofagasta             R3        AT2   1024294\n",
+      "17    3      Santiago             R1        AT2    841279\n",
+      "18    3      Santiago             R4        AT1    587434\n",
+      "19    3      Santiago             R5        AT1   2541062\n",
+      "20    3      Santiago             R6        AT1    666668\n"
      ]
     }
    ],
@@ -227,8 +236,7 @@
     "                            \"Ciudad Origen\": c,\n",
     "                            \"Región Destino\": r,\n",
     "                            \"Transporte\": t,\n",
-    "                            \"Unidades\": int(Y_ikft[c, r, t, an].X),\n",
-    "                            \"Tipo de Planta\": next((tipo for tipo in data.tipos_planta if X_ij[c, tipo].X > 0), '?')\n",
+    "                            \"Unidades\": int(Y_ikft[c, r, t, an].X)\n",
     "                        })\n",
     "\n",
     "\n",
@@ -240,7 +248,7 @@
     "with open('results\\\\results_original.txt', 'w', encoding='utf-8') as arch:\n",
     "    arch.write(f'Función objetivo: {model.objVal}\\n')\n",
     "    for _, row in df_resultados.iterrows():\n",
-    "        arch.write(f\"Transportar {row['Unidades']} unidades desde {row['Ciudad Origen']} a {row['Región Destino']} usando {row['Transporte']} en el año {row['Año']}. Tipo de Planta: {row['Tipo de Planta']}\\n\")\n"
+    "        arch.write(f\"Transportar {row['Unidades']} unidades desde {row['Ciudad Origen']} a {row['Región Destino']} usando {row['Transporte']} en el año {row['Año']}.\\n\")\n"
    ]
   },
   {
@@ -252,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,6 +292,16 @@
     "        model.addConstr(sum(Y_ikft[i, k, f, t] for i in data.ciudades for f in data.transportes) >= Dk_t[k, t])\n",
     "\n",
     "\n",
+    "#nueva\n",
+    "for i in data.ciudades:\n",
+    "    for t in data.años:\n",
+    "        model.addConstr(\n",
+    "            sum(Y_ikft[i,k,f,t] for k in data.regiones for f in data.transportes) <= \n",
+    "            sum(X_ij[i,j] * Cpp[j] for j in data.tipos_planta)\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "\n",
     "# Función objetivo (funcion 2 del word)\n",
     "model.setObjective(\n",
     "    sum(C_ij[i, j] * X_ij[i, j] for i in data.ciudades for j in data.tipos_planta) +\n",
@@ -297,32 +315,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Año Ciudad Origen Región Destino Transporte  Unidades Tipo de Planta\n",
-      "0     1      Santiago             R1        AT2   1104060        Pequeña\n",
-      "1     1      Santiago             R2        AT1   1180184        Pequeña\n",
-      "2     1      Santiago             R3        AT1    645184        Pequeña\n",
-      "3     1      Santiago             R4        AT1    444185        Pequeña\n",
-      "4     1      Santiago             R5        AT1   1315181        Pequeña\n",
-      "5     1      Santiago             R6        AT1    394478        Pequeña\n",
-      "6     2      Santiago             R1        AT2   1280709        Pequeña\n",
-      "7     2      Santiago             R2        AT1   1439824        Pequeña\n",
-      "8     2      Santiago             R3        AT1    812932        Pequeña\n",
-      "9     2      Santiago             R4        AT1    510812        Pequeña\n",
-      "10    2      Santiago             R5        AT1   1828102        Pequeña\n",
-      "11    2      Santiago             R6        AT1    512822        Pequeña\n",
-      "12    3      Santiago             R1        AT2   1485623        Pequeña\n",
-      "13    3      Santiago             R2        AT1   1756585        Pequeña\n",
-      "14    3      Santiago             R3        AT1   1024294        Pequeña\n",
-      "15    3      Santiago             R4        AT1    587434        Pequeña\n",
-      "16    3      Santiago             R5        AT1   2541062        Pequeña\n",
-      "17    3      Santiago             R6        AT1    666668        Pequeña\n"
+      "    Año Ciudad Origen Región Destino Transporte  Unidades\n",
+      "0     1      Santiago             R1        AT2   1104060\n",
+      "1     1      Santiago             R2        AT1   1180184\n",
+      "2     1      Santiago             R3        AT1    645184\n",
+      "3     1      Santiago             R4        AT1    444185\n",
+      "4     1      Santiago             R5        AT1   1315181\n",
+      "5     1      Santiago             R6        AT1    394478\n",
+      "6     2      Santiago             R1        AT2   1280709\n",
+      "7     2      Santiago             R2        AT1   1439824\n",
+      "8     2      Santiago             R3        AT1    812932\n",
+      "9     2      Santiago             R4        AT1    510812\n",
+      "10    2      Santiago             R5        AT1   1828102\n",
+      "11    2      Santiago             R6        AT1    512822\n",
+      "12    3      Santiago             R1        AT2   1485623\n",
+      "13    3      Santiago             R2        AT1   1756585\n",
+      "14    3      Santiago             R3        AT1   1024294\n",
+      "15    3      Santiago             R4        AT1    587434\n",
+      "16    3      Santiago             R5        AT1   2541062\n",
+      "17    3      Santiago             R6        AT1    666668\n"
      ]
     }
    ],
@@ -348,8 +366,7 @@
     "                            \"Ciudad Origen\": c,\n",
     "                            \"Región Destino\": r,\n",
     "                            \"Transporte\": t,\n",
-    "                            \"Unidades\": int(Y_ikft[c, r, t, an].X),\n",
-    "                            \"Tipo de Planta\": [j for j in data.tipos_planta if X_ij[c, j].X][0]\n",
+    "                            \"Unidades\": int(Y_ikft[c, r, t, an].X)\n",
     "                        })\n",
     "\n",
     "# Crear DataFrame para los resultados\n",
@@ -360,7 +377,7 @@
     "with open('results\\\\results_restriccion_relajada.txt', 'w', encoding='utf-8') as arch:\n",
     "    arch.write(f'Función objetivo: {model.objVal}\\n')\n",
     "    for _, row in df_resultados.iterrows():\n",
-    "        arch.write(f\"Transportar {row['Unidades']} unidades desde {row['Ciudad Origen']} a {row['Región Destino']} usando {row['Transporte']} en el año {row['Año']}. Tipo de Planta: {row['Tipo de Planta']}\\n\")\n"
+    "        arch.write(f\"Transportar {row['Unidades']} unidades desde {row['Ciudad Origen']} a {row['Región Destino']} usando {row['Transporte']} en el año {row['Año']}.\\n\")\n"
    ]
   }
  ],
