fix: update project structure and add LaTeX report

--- a/Proyecto 1/FunnysCompany.ipynb
+++ b/Proyecto 1/FunnysCompany.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<center>\n",
     "    <img src=\"http://sct.inf.utfsm.cl/wp-content/uploads/2020/04/logo_di.png\" style=\"width:40%\">\n",
-    "    <h2> ILI-140 - Taller de Programacion </h2>\n",
+    "    <h2> ILI-140 - Taller de Programación </h2>\n",
     "    <h2> Caso Funnys Company</h2>\n",
     "    <h3> Grupo Butify </h3>\n",
     "    <h3> 22/03/2025 </h3>\n",
