fix: add README.txt

--- a/Proyecto 1/FunnysCompany.ipynb
+++ b/Proyecto 1/FunnysCompany.ipynb
@@ -17,6 +17,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Integrantes\n",
+    "Nicolas Horta  \n",
+    "Nicolas Olivos  \n",
+    "Benjamin Pavez  \n",
+    "Ariel Pulgar  \n",
+    "Gabriel Saez  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Optimización de Transporte con Gurobi\n",
     "\n",
     "Este notebook presenta un enfoque para resolver un **problema de optimización de transporte** utilizando la herramienta **Gurobi**, que es un optimizador de programación matemática ampliamente utilizado para resolver problemas de optimización lineal y no lineal. El problema modelado involucra la asignación de unidades de transporte desde varias ciudades de origen hacia diferentes regiones de destino, considerando diversas opciones de transporte, la capacidad de producción de las plantas y la demanda futura de las regiones.\n",
